--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
 body {
   background: #f8e8a6;
 }
+h1,
+p {
+  text-align: center;
+}
+.container {
+  display: flex;
+  justify-content: center;
+}
+a {
+  margin: 0 10px;
+  color: green;
+}
+img {
+  margin-bottom: 20px;
+}
